--- a/index.html
+++ b/index.html
@@ -4,10 +4,51 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spaceman</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <script defer src="js/main.js"></script>
 </head>
 <body>
-  
+  <h1>Spaceman</h1>
+  <div class="dropdown">
+    <button class="dropbtn">Categories</button>
+    <div class="dropdown-content">
+      <a href="#">Movies</a>
+      <a href="#">Music</a>
+      <a href="#">Geography</a>
+      <a href="#">Animals</a>
+    </div>
+  </div>
+  <div id="board"></div>
+  <div id="keys">
+    <button>a</button>
+    <button>b</button>
+    <button>c</button>
+    <button>d</button>
+    <button>e</button>
+    <button>f</button>
+    <button>g</button>
+    <button>h</button>
+    <button>i</button>
+    <button>j</button>
+    <button>k</button>
+    <button>l</button>
+    <button>m</button>
+    <button>n</button>
+    <button>o</button>
+    <button>p</button>
+    <button>q</button>
+    <button>r</button>
+    <button>s</button>
+    <button>t</button>
+    <button>u</button>
+    <button>v</button>
+    <button>w</button>
+    <button>x</button>
+    <button>y</button>
+    <button>z</button>
+  </div>
 </body>
 </html>
