--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <h1>Spaceman</h1>
+  <h2 id="win-message"></h2>
   <div class="dropdown">
     <button class="dropbtn">Categories</button>
     <div class="dropdown-content">
@@ -22,6 +23,7 @@
     </div>
   </div>
   <div id="board"></div>
+  <img id="img" alt="spaceman">
   <div id="keys">
     <button>a</button>
     <button>b</button>
